[package]
name = "mpg123-sys"
version = "0.6.0"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides bindings to mpg123."
documentation = "https://docs.rs/mpg123-sys"
homepage = "https://github.com/stainless-steel/mpg123-sys"
repository = "https://github.com/stainless-steel/mpg123-sys"
readme = "README.md"
categories = ["encoding", "external-ffi-bindings", "multimedia::audio"]
keywords = ["audio", "decoding", "sound"]
build = "build.rs"
links = "mpg123"

[features]
static = []

[dependencies]
bitflags = "1.0"
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
